# OpenMM1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  hooking.cpp  hooking.h  midtown.cpp  midtown.h  minwin.h  pch.h  test.cpp  test.h
src/agi/: CMakeLists.txt  agilib.cpp  agilib.h  agilib.inl  bitmap.cpp  bitmap.h  cmodel.cpp  cmodel.h  cmodel8.cpp  cmodel8.h  cmodelx.cpp  cmodelx.h  dlp.cpp  dlp.h  dlptmpl.cpp  dlptmpl.h  error.cpp  error.h  getdlp.cpp  getdlp.h  light.cpp  light.h  lmodel.cpp  lmodel.h  mtldef.cpp  mtldef.h  mtllib.cpp  mtllib.h  palette.cpp  palette.h  physdef.cpp  physdef.h  physlib.cpp  physlib.h  pipeline.cpp  pipeline.h  print.cpp  print.h  refresh.cpp  refresh.h  (+12 more)
src/agid3d/: CMakeLists.txt  d3dlight.cpp  d3dlight.h  d3dmtldef.cpp  d3dmtldef.h  d3dpipe.cpp  d3dpipe.h  d3drpipe.cpp  d3drpipe.h  d3drsys.cpp  d3drsys.h  d3dtexdef.cpp  d3dtexdef.h  d3dview.cpp  d3dview.h  ddbitmap.cpp  ddbitmap.h  dderror.cpp  dderror.h  ddpipe.cpp  ddpipe.h  pcpipe.cpp  pcpipe.h
src/agigl/: CMakeLists.txt  glbitmap.cpp  glbitmap.h  glpipe.cpp  glpipe.h  glrsys.cpp  glrsys.h  gltexdef.cpp  gltexdef.h  glutils.cpp  glutils.h  glview.cpp  glview.h
src/agisdl/: CMakeLists.txt  sdlfont.cpp  sdlfont.h  sdlinit.cpp  sdlinit.h
src/agisw/: CMakeLists.txt  swddraw.cpp  swddraw.h  swemitrunall.cpp  swemitrunall.h  swpipe.cpp  swpipe.h  swrend.cpp  swrend.h  swrsys.cpp  swrsys.h  swtexdef.cpp  swtexdef.h
src/agiworld/: CMakeLists.txt  bone.cpp  bone.h  getmesh.cpp  getmesh.h  getmodel.cpp  getmodel.h  meshlight.cpp  meshlight.h  meshload.cpp  meshload.h  meshmodel.cpp  meshmodel.h  meshrend.cpp  meshrend.h  meshset.cpp  meshset.h  mrkni.cpp  mrkni.h  packnorm.cpp  packnorm.h  quality.cpp  quality.h  skeleton.cpp  skeleton.h  texsheet.cpp  texsheet.h  texsort.cpp  texsort.h
src/arts7/: CMakeLists.txt  benchstats.cpp  benchstats.h  camera.cpp  camera.h  cullable.cpp  cullable.h  cullmgr.cpp  cullmgr.h  dof.h  form.cpp  form.h  lamp.cpp  lamp.h  linear.cpp  linear.h  node.cpp  node.h  sim.cpp  sim.h  view.cpp  view.h
src/data7/: CMakeLists.txt  args.cpp  args.h  assert.cpp  assert.h  b2f.cpp  b2f.h  base.cpp  base.h  bool32.h  cache.cpp  cache.h  callback.cpp  callback.h  cstr.cpp  cstr.h  format.cpp  format.h  global.cpp  global.h  hash.cpp  hash.h  ipc.cpp  ipc.h  list.cpp  list.h  machname.cpp  machname.h  memstat.cpp  memstat.h  metaclass.cpp  metaclass.h  metatype.cpp  metatype.h  miniparser.cpp  miniparser.h  mmx.cpp  mmx.h  pager.cpp  pager.h  (+15 more)
src/dyna7/: CMakeLists.txt  dyna.cpp  dyna.h  gfx.cpp  gfx.h
src/eventq7/: CMakeLists.txt  event.cpp  event.h  eventq.cpp  eventq.h  geinputLib.cpp  geinputLib.h  replay.cpp  replay.h  winevent.cpp  winevent.h
src/localize/: CMakeLists.txt  localize.h
src/memory/: CMakeLists.txt  allocator.cpp  allocator.h  stack.cpp  stack.h  stub.cpp  stub.h  valloc.cpp  valloc.h
src/mmai/: CMakeLists.txt  addoncaraudio.cpp  addoncaraudio.h  aiData.cpp  aiData.h  aiGoalAvoidPlayer.cpp  aiGoalAvoidPlayer.h  aiGoalBackup.cpp  aiGoalBackup.h  aiGoalChase.cpp  aiGoalChase.h  aiGoalCollision.cpp  aiGoalCollision.h  aiGoalFollowWayPts.cpp  aiGoalFollowWayPts.h  aiGoalRandomDrive.cpp  aiGoalRandomDrive.h  aiGoalRegainRail.cpp  aiGoalRegainRail.h  aiGoalStop.cpp  aiGoalStop.h  aiIntersection.cpp  aiIntersection.h  aiMap.cpp  aiMap.h  aiPath.cpp  aiPath.h  aiPedestrian.cpp  aiPedestrian.h  aiPoliceForce.cpp  aiPoliceForce.h  aiRailSet.cpp  aiRailSet.h  aiStuck.cpp  aiStuck.h  aiTrafficLight.cpp  aiTrafficLight.h  aiVehicle.cpp  aiVehicle.h  aiVehicleAmbient.cpp  (+15 more)
src/mmanim/: AnimDOF.cpp  AnimDOF.h  AnimMgr.cpp  AnimMgr.h  AnimSpline.cpp  AnimSpline.h  AnimTrigger.cpp  AnimTrigger.h  CMakeLists.txt  Excel.cpp  Excel.h  boat.cpp  boat.h  bridge.cpp  bridge.h  mmbridgeaudmgr.cpp  mmbridgeaudmgr.h  plane.cpp  plane.h  train.cpp  train.h  traincar.cpp  traincar.h
src/mmaudio/: CMakeLists.txt  audstream.cpp  audstream.h  cd.h  crevbuf.cpp  crevbuf.h  creverb.cpp  creverb.h  dsglobal.cpp  dsglobal.h  dupbufcreator.cpp  dupbufcreator.h  eaxguid.cpp  eaxguid.h  head.cpp  head.h  manager.h  mixer.cpp  mixer.h  mmvoicecommentary.cpp  mmvoicecommentary.h  sound.cpp  sound.h  soundobj.cpp  soundobj.h  streamobj.cpp  streamobj.h
src/mmbangers/: CMakeLists.txt  active.cpp  active.h  banger.cpp  banger.h  data.cpp  data.h  dof.cpp  dof.h
src/mmcamcs/: CMakeLists.txt  aicamcs.cpp  aicamcs.h  appcamcs.cpp  appcamcs.h  basecamcs.cpp  basecamcs.h  carcamcs.cpp  carcamcs.h  pointcamcs.cpp  pointcamcs.h  polarcamcs.cpp  polarcamcs.h  postcamcs.cpp  postcamcs.h  povcamcs.cpp  povcamcs.h  precamcs.cpp  precamcs.h  spline.cpp  spline.h  trackcamcs.cpp  trackcamcs.h  transitioncs.cpp  transitioncs.h  viewcs.cpp  viewcs.h
src/mmcar/: CMakeLists.txt  axle.cpp  axle.h  car.cpp  car.h  carmodel.cpp  carmodel.h  carsim.cpp  carsim.h  carsimcheap.cpp  carsimcheap.h  drivetrain.cpp  drivetrain.h  engine.cpp  engine.h  engineaudio.cpp  engineaudio.h  engineaudioopponent.cpp  engineaudioopponent.h  force.cpp  force.h  gyro.cpp  gyro.h  impactaudio.cpp  impactaudio.h  netaddoncaraudio.cpp  netaddoncaraudio.h  netaudiomanager.cpp  netaudiomanager.h  networkcaraudio.cpp  networkcaraudio.h  opponentcaraudio.cpp  opponentcaraudio.h  opponentimpactaudio.cpp  opponentimpactaudio.h  opponentsurfaceaudio.cpp  opponentsurfaceaudio.h  playercaraudio.cpp  playercaraudio.h  policecaraudio.cpp  (+23 more)
src/mmcity/: CMakeLists.txt  anim.cpp  anim.h  cellrend.cpp  cellrend.h  cullcity.cpp  cullcity.h  heap.cpp  heap.h  inst.cpp  inst.h  instchn.cpp  instchn.h  loader.cpp  loader.h  ped.cpp  ped.h  portal.cpp  portal.h  position.cpp  position.h  positions.cpp  positions.h  renderweb.cpp  renderweb.h  sky.cpp  sky.h
src/mmcityinfo/: CMakeLists.txt  cityinfo.cpp  cityinfo.h  citylist.cpp  citylist.h  crc.cpp  crc.h  infobase.cpp  infobase.h  miscdata.cpp  miscdata.h  playercfg.cpp  playercfg.h  playerdata.cpp  playerdata.h  playerdir.cpp  playerdir.h  racedata.cpp  racedata.h  racerecord.cpp  racerecord.h  roadsect.cpp  roadsect.h  state.cpp  state.h  (+4 more)
(+395 files in other folders)
