arts_add_component(data7
    args.cpp
    args.h
    b2f.cpp
    b2f.h
    base.cpp
    base.h
    cache.cpp
    cache.h
    callback.cpp
    callback.h
    global.cpp
    global.h
    hash.cpp
    hash.h
    ipc.cpp
    ipc.h
    list.cpp
    list.h
    machname.cpp
    machname.h
    memstat.cpp
    memstat.h
    metaclass.cpp
    metaclass.h
    metatype.cpp
    metatype.h
    miniparser.cpp
    miniparser.h
    mmx.cpp
    mmx.h
    pager.cpp
    pager.h
    perfstat.cpp
    perfstat.h
    printer.cpp
    printer.h
    quitf.cpp
    quitf.h
    speed.cpp
    speed.h
    str.cpp
    str.h
    timer.cpp
    timer.h

    assert.h
    assert.cpp
    cstr.h
    cstr.cpp
    ptr.h
    ref.h
)

target_link_libraries(data7 winmm)
